Fixing column width sync by better calculating text truncation for PCs cell text and avoiding text spanning multiple lines

--- a/app/css/main-br.css
+++ b/app/css/main-br.css
@@ -249,7 +249,7 @@ i.fa {
 
 td.category {
   background-color: #FCEDF8;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
   line-height: 16px;
   color: #000;
