--- a/app/css/main-dd.css
+++ b/app/css/main-dd.css
@@ -249,7 +249,7 @@ i.fa {
 
 td.category {
   background-color: #F0E0C6;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
   line-height: 16px;
   color: #000;
