--- a/sass/app/common.scss
+++ b/sass/app/common.scss
@@ -245,7 +245,7 @@ i.fa {
 
 td.category {
 	background-color: $category;
-	font-size: 16px;
+	font-size: 15px;
 	font-weight: bold;
 	line-height: 16px;
 	color: $black;
